chore(zero-api): GET /files/images/:id (public)
