# apps/zero-api/swagger.json
@@ -690,6 +690,29 @@
           "files"
         ]
       }
+    },
+    "/api/files/images/{id}": {
+      "get": {
+        "operationId": "FilesController_getImage",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "files"
+        ]
+      }
     }
   },
   "info": {
